<?xml version="1.0"?>
<package>
  <name>eca_arm5emicro_driver_arm</name>
  <version>1.0.0</version>
  <description>The eca_arm5emicro_driver package</description>

  <maintainer email="ing.petitti@gmail.com">Antonio Petitti</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

</package>
